	src/modules/metric/cerebro_metric_swapused.c,
	src/modules/metric/cerebro_metric_swapfree.c,
	config/ac_memory.m4: New files.

	* src/modules/metric/Makefile.am, configure.ac,
	man/cerebro_module.3.in: Adjust appropriately for new metrics.

	* src/cerebrod/cerebrod_config.h: Increase
	CEREBROD_METRIC_MAX_DEFAULT.

	* man/cerebro.conf.5.in: Update appropriately.
	
2006-08-25  Albert Chu  <chu11@llnl.gov>

	Add metric module support for load averages.

	* src/modules/metric/cerebro_metric_loadavg1.c,
	src/modules/metric/cerebro_metric_loadavg5.c,
	src/modules/metric/cerebro_metric_loadavg15.c,
	config/ac_loadavg.m4: New files.
	
	* src/modules/metric/Makefile.am, configure.ac,
	man/cerebro_module.3.in: Adjust appropriately for new metrics.
	
2006-07-26  Albert Chu  <chu11@llnl.gov>

	* config/ac_cerebro_module_dir.m4: Revert changes to fix distcheck.
	
2006-07-07  Albert Chu  <chu11@llnl.gov>

	* src/libs/util/network_util.c (low_timeout_connect): Alter return
	error based on getsockopt errno.
	
2006-07-03  Albert Chu  <chu11@llnl.gov>

	* src/libs, src/cerebrod: Support new listner ports, ips, and
	network interfaces.

	* src/cerebrod/cerebrod_config.c
	(_cerebrod_calculate_destination_ip_is_multicast_setting,
	_cerebrod_calculate_heartbeat_frequency_ranged_setting,
	_cerebrod_calculate_heartbeat_source_network_interface_in_addr_and_index,
	_cerebrod_calculate_heartbeat_destination_ip_in_addr): Removed
	functions.  Collapse code into
	_cerebrod_calculate_configuration_data.

	* man/cerebro.conf.5.in, man/cerebro_module_devel.3.in: Update
	with new configs appropriately.

	* Several minor bug fixes.

	* configure.ac: Upped library version.
	
2006-06-29  Albert Chu  <chu11@llnl.gov>

	* tagged pre_config_multi_subnet_reorg

	* src/libs/include/cerebro/cerebro_config.h,
	src/libs/util/config_util.c, src/cerebrod/cerebrod_config.h,
	src/cerebrod/cerebrod_config.c, src/cerebrod/cerebrod_listener.c,
	src/cerebrod/cerebrod_speaker.c, man/cerebro.conf.5.in,